# MarioNet

./: .gitignore  .pre-commit-config.yaml  README.md  biggan_blocks.py  common.py  config.py  config.yaml  config_.yaml  dataloader.py  decoder.py  extract_landmarks.py  install.sh  preprocessor.py  requirements.txt  setup.cfg  target_encoder.py  test_config.py  test_forward.py  train.py  train_loop.py  unet_blocks.py  utils.py
config/: config.py  config.yaml
loss/: __init__.py  discriminator_loss.py  feature_map_loss.py  perceptual_loss.py  test_perceptual_loss.py
marionet/config/: config.py
marionet/dataset/: __init__.py  dataset.py
marionet/loss/: __init__.py  discriminator_loss.py  feature_map_loss.py  generator_hinge_loss.py  generator_loss.py  perceptual_loss.py
marionet/model/: __init__.py  discriminator.py  marionet.py  marionet_modules.py
marionet/model/common/: blocks.py  conv_merger.py  positional_encoding.py  utils.py
model/: __init__.py  dataloader.py  dataset.py  discriminator.py  marionet.py  marionet_modules.py  tmp.py
model/common/: blocks.py  utils.py  warp_alignment.py
model/config/: config.yaml
model/dataloader/: dataloader.py
models/: main_model.py
preprocess/: extract_landmarks.py  preprocess.py
tests/: test_config.py  test_dataloader.py  test_dataset.py  test_generator_loss.py  test_marionet.py  test_marionet_modules.py  test_perceptual_loss.py
