[metadata]
name = marionet
version = 0.1.0
description = MarioNet network implementation
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.8
install_requires =
    face-alignment==1.3.3
    numba==0.52.0
    opencv-python==4.5.1.48
    scikit-image==0.18.1
    torch>=1.7.0
    scipy>=0.17.0
    pytest>=6.0
    numpy
    PyYAML
    pre-commit
    setuptools
    wheel
    tqdm

[tool:pytest]
testpaths =
    tests